# rand

./: Cargo.toml  build.rs
benches/: Cargo.toml
src/: lib.rs  rng.rs
src/distr/: distribution.rs  float.rs  integer.rs  other.rs  slice.rs  uniform_float.rs  uniform_int.rs  utils.rs
src/distr/weighted/: weighted_index.rs
